--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cookies-next": "^4.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "next": "^13.4.13",
@@ -35,6 +36,8 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "resuite": "^0.0.2",
+    "rsuite": "^5.59.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
